<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <include layout="@layout/alen_toolbar_layout"/>
    <include layout="@layout/alen_progress_layout"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="top">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Small8Style"
                    android:text="@string/tip_info_dw"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tip_info_dw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Small8Style"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="top">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Small8Style"
                    android:text="@string/tip_info_grid"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tip_info_grid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Small8Style"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="top">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Small8Style"
                    android:text="@string/tip_info_name"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tip_info_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Small8Style"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="top">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Small8Style"
                    android:text="@string/tip_info_sex"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tip_info_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Small8Style"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="top">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Small8Style"
                    android:text="@string/tip_info_phone"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tip_info_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Small8Style"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="top">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Small8Style"
                    android:text="@string/tip_info_idno"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tip_info_idno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Small8Style"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="top">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Small8Style"
                    android:text="@string/tip_info_address"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tip_info_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Small8Style"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="top">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Small8Style"
                    android:text="@string/tip_info_content"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tip_info_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Small8Style"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Small8Style"
                android:text="@string/tip_info_file"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tip_info_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/frame_eight_distance"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/frame_eight_distance"
                android:background="@color/gray_line_color"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tip_info_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_eight_distance"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>