<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <include layout="@layout/alen_toolbar_layout"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white_background">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/frame_eight_distance"
                android:gravity="center">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/userTitleStyle"
                    android:text="@string/user_photo"/>
                <allen.frame.widget.CircleImageView
                    android:id="@+id/user_photo"
                    android:layout_width="@dimen/frame_60_distance"
                    android:layout_height="@dimen/frame_60_distance"
                    app:border_width="0dp"
                    app:border_color="@android:color/transparent"
                    android:src="@mipmap/ic_degault_photo"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View style="@style/HalfGrayLine"
                android:layout_marginStart="@dimen/frame_eight_distance"
                android:layout_marginEnd="@dimen/frame_eight_distance"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/frame_eight_distance">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/userTitleStyle"
                    android:text="@string/user_name"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/userConGrayStyle"
                    android:background="@color/white"

                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <View style="@style/HalfGrayLine"
                android:layout_marginStart="@dimen/frame_eight_distance"
                android:layout_marginEnd="@dimen/frame_eight_distance"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/frame_eight_distance">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/userTitleStyle"
                    android:text="@string/user_phone"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/user_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/userEditStyle"
                    android:background="@color/white"
                    android:layout_weight="1"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View style="@style/HalfGrayLine"
                android:layout_marginStart="@dimen/frame_eight_distance"
                android:layout_marginEnd="@dimen/frame_eight_distance"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/frame_eight_distance">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/userTitleStyle"
                    android:text="@string/user_sex"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/user_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/userEditStyle"
                    android:drawableEnd="@mipmap/user_item_go"
                   />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View style="@style/HalfGrayLine"
                android:layout_marginStart="@dimen/frame_eight_distance"
                android:layout_marginEnd="@dimen/frame_eight_distance"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/frame_eight_distance"
                android:visibility="gone">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/userTitleStyle"
                    android:text="@string/user_level"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/user_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/userEditStyle"
                    android:drawableEnd="@mipmap/user_item_go"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View style="@style/HalfGrayLine"
                android:layout_marginStart="@dimen/frame_eight_distance"
                android:layout_marginEnd="@dimen/frame_eight_distance"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/frame_eight_distance">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/userTitleStyle"
                    android:text="@string/user_email"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/userEditStyle"
                    android:background="@color/white"
                    android:layout_weight="1"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View style="@style/HalfGrayLine"
                android:layout_marginStart="@dimen/frame_eight_distance"
                android:layout_marginEnd="@dimen/frame_eight_distance"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/frame_eight_distance">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/userTitleStyle"
                    android:text="@string/user_address"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/user_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/userEditStyle"
                    android:background="@color/white"
                    android:layout_weight="1"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ok_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/discussTextWhiteStyle"
                android:background="@drawable/afs_light_blue_bt_bg"
                android:text="@string/commit_hint"
                android:layout_marginStart="@dimen/frame_32_distance"
                android:layout_marginEnd="@dimen/frame_32_distance"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>