<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white_background">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@mipmap/ic_own_photo_bg"
                android:layout_margin="@dimen/frame_eight_distance">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/frame_edge_distance">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/ownPhotoBigWhite"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_dw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/ownPhotoSmallWhite"
                        android:layout_marginTop="@dimen/frame_four_distance"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <allen.frame.widget.CircleImageView
                    android:id="@+id/user_photo"
                    android:layout_width="@dimen/frame_60_distance"
                    android:layout_height="@dimen/frame_60_distance"
                    app:border_width="0dp"
                    app:border_color="@android:color/transparent"
                    android:layout_margin="@dimen/frame_eight_distance"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/frame_edge_distance"
                    android:layout_height="@dimen/frame_edge_distance"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_own_white_go"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_gz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/public_user_gz"
                style="@style/ownItemBlackSmall"
                android:drawableStart="@mipmap/user_gz"
                android:drawableEnd="@mipmap/user_item_go"/>
            <View style="@style/ownOneGrayLine"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_zan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/public_user_zan"
                style="@style/ownItemBlackSmall"
                android:drawableStart="@mipmap/user_zan"
                android:drawableEnd="@mipmap/user_item_go"/>
            <View style="@style/ownOneGrayLine"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/user_pl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/public_user_pl"
                    style="@style/ownItemBlackSmall"
                    android:drawableStart="@mipmap/user_pj"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/user_notice_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/blueNumberWhiteCircle"
                    android:visibility="invisible"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ownItemBlackSmall"
                    android:drawableEnd="@mipmap/user_item_go"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View style="@style/ownOneGrayLine"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/user_fk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/public_user_fk"
                    style="@style/ownItemBlackSmall"
                    android:drawableStart="@mipmap/user_fk"
                    android:drawableEnd="@mipmap/user_item_go"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <View style="@style/ownOneGrayLine"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/public_user_update"
                style="@style/ownItemBlackSmall"
                android:drawableStart="@mipmap/user_update"
                android:drawableEnd="@mipmap/user_item_go"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white_background"
        android:paddingStart="@dimen/frame_32_distance"
        android:paddingEnd="@dimen/frame_32_distance">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/exit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_bt_hint"
            style="@style/exitBt"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>