<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/alen_toolbar_layout"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/frame_four_distance">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/newsDetailTitleStyle"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="@dimen/frame_eight_distance"
                android:background="@drawable/default_input_bg">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/detail_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/newsDetailDateStyle"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/detail_sourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/newsDetailDateStyle"
                    android:layout_marginStart="@dimen/frame_eight_distance"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detail_con"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/newsDetailConStyle"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/frame_four_distance"
        android:orientation="horizontal"
        android:visibility="gone">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_gz"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/squareBlackSmall"
            android:drawableStart="@mipmap/square_add_gz"
            android:drawablePadding="@dimen/frame_four_distance"
            android:text="@string/square_gz"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_discuss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/squareWhiteSmall"
            android:background="@drawable/blue_circle_16dp"
            android:drawableStart="@mipmap/square_discuss"
            android:drawablePadding="@dimen/frame_four_distance"
            android:text="@string/square_discuss"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_zan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/squareBlackSmall"
            android:drawableStart="@mipmap/square_zan_gray"
            android:drawablePadding="@dimen/frame_four_distance"
            android:text="@string/square_zan"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>